; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/src/extr_glx_context.c__glfwPlatformGetProcAddress.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/src/extr_glx_context.c__glfwPlatformGetProcAddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 (i32*)*, i32 (i32*)* }

@_glfw = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_glfwPlatformGetProcAddress(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i32 (i32*)*, i32 (i32*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 2), align 8
  %5 = icmp ne i32 (i32*)* %4, null
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load i32 (i32*)*, i32 (i32*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 2), align 8
  %8 = load i8*, i8** %3, align 8
  %9 = bitcast i8* %8 to i32*
  %10 = call i32 %7(i32* %9)
  store i32 %10, i32* %2, align 4
  br label %23

11:                                               ; preds = %1
  %12 = load i32 (i32*)*, i32 (i32*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 1), align 8
  %13 = icmp ne i32 (i32*)* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %11
  %15 = load i32 (i32*)*, i32 (i32*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 1), align 8
  %16 = load i8*, i8** %3, align 8
  %17 = bitcast i8* %16 to i32*
  %18 = call i32 %15(i32* %17)
  store i32 %18, i32* %2, align 4
  br label %23

19:                                               ; preds = %11
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  %21 = load i8*, i8** %3, align 8
  %22 = call i32 @dlsym(i32 %20, i8* %21)
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %19, %14, %6
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @dlsym(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
